# Gonaibo

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
gonaibo/: __init__.py  attenuation.py
notebooks/: attenuation.ipynb
site/: 404.html  index.html  search.html  sitemap.xml
